bug 739542 - Disable screen timeout when playing HTML5 <video> (webm, H.264) r=doublec